--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
       <tr><th colspan="4">Drivers Championship Standings</th></tr>
     </thead>
     <tbody>
-      <tr ng-repeat="driver in driversList | filter: nameFilter">
+      <tr ng-repeat="driver in driversList | filter: searchFilter">
         <td>{{$index + 1}}.</td>
         <td>{{driver.Driver.nationality}}</td>
         <td>
